syntax = "proto3";

message AchievementProtoFieldInfo {
    uint32 id = 1;
    uint32 status = 2;
    uint32 total_progress = 3;
    uint32 current_progress = 4;
    uint32 finish_timestamp = 5;
}

message AchievementItem {
    uint32 pre = 1;
    uint32 group = 2;
    string name = 3;
    string description = 4;
}

message MethodRvaConfig {
    uint32 do_cmd = 1;
    uint32 update_normal_prop = 3;
    uint32 new_string = 4;
    uint32 find_game_object = 5;
    uint32 event_system_update = 6;
    uint32 simulate_pointer_click = 7;
    uint32 to_int32 = 8;
    uint32 tcp_state_ptr = 9;
    uint32 shared_info_ptr = 10;
    uint32 decompress = 11;
}

message NativeLibConfig {
    uint32 store_cmd_id = 1;
    uint32 achievement_cmd_id = 2;
    map<uint32, MethodRvaConfig> method_rva = 10;
}

message AchievementInfo {
    string version = 1;
    map<uint32, string> group = 2;
    map<uint32, AchievementItem> items = 3;
    AchievementProtoFieldInfo pb_info = 4;
    NativeLibConfig native_config = 5;
}